# opencv_ffmpeg_master

./: CMakeLists.txt  README.md
include/: avTrans.h  cameraSystem.h  cvTrans.h  rtmpPush.h
include/glad/: glad.h
src/: avTrans.cpp  cameraSystem.cpp  cvTrans.cpp  glad.c  main.cpp  rtmpPush.cpp
